--- a/spring-petclinic/pom.xml
+++ b/spring-petclinic/pom.xml
@@ -345,6 +345,26 @@
 
 	<!-- all Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
 	<build>
+		<resources>
+	        <!-- resource>
+	            <filtering>true</filtering>
+	            <directory>src/test/resources</directory>
+	            <includes>
+	                <include>**/*.properties</include>
+	            </includes>
+	            <excludes>
+	                <exclude>**/*local.properties</exclude>
+	            </excludes>
+	        </resource> -->
+	        <resource>
+	            <directory>src/main/resources</directory>
+	            <includes>
+	                <include>**/*.properties</include>
+	                <include>**/*.xml</include>
+	                <include>**/*.sql</include>
+	            </includes>
+	        </resource>
+	    </resources>
 		<defaultGoal>install</defaultGoal>
 		<plugins>
 			<plugin>
