--- a/spring-petclinic/src/main/resources/spring/data-access.properties
+++ b/spring-petclinic/src/main/resources/spring/data-access.properties
@@ -27,9 +27,13 @@ jpa.showSql=true
 # MySQL Settings
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://mysampledb.civpvb8m2v6z.us-west-2.rds.amazonaws.com:6306/petclinic
-jdbc.username=sampleuser
-jdbc.password=SampleUser
+#jdbc.url=jdbc:mysql://mysampledb.civpvb8m2v6z.us-west-2.rds.amazonaws.com:6306/petclinic
+#jdbc.username=sampleuser
+#jdbc.password=SampleUser
+
+jdbc.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net/ad_c8d4aa2cb8ef274
+jdbc.username=bc2d92850864batest
+jdbc.password=26f553ed
 
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/mysql/initDB.sql
