Test commit for demo

--- a/spring-petclinic/src/main/resources/spring/data-access.properties
+++ b/spring-petclinic/src/main/resources/spring/data-access.properties
@@ -32,7 +32,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.password=SampleUser
 
 jdbc.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net/ad_c8d4aa2cb8ef274
-jdbc.username=bc2d92850864batest
+jdbc.username=bc2d92850864ba
 jdbc.password=26f553ed
 
 # Properties that control the population of schema and data for a new data source
